--- a/CSS/Styles.css
+++ b/CSS/Styles.css
@@ -4,8 +4,11 @@
     box-sizing: border-box;
     font-family: sans-serif;
     list-style: none;
-    margin: 0;
     padding: 0;
+}
+
+body{
+    margin: 0;
 }
 
 .chat{
